--- a/src/components/PDFViewer.css
+++ b/src/components/PDFViewer.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(197, 197, 197);
+    z-index: 1;
 }
 
 .pdfDisplay{
